<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.zrlog</groupId>
    <artifactId>zrlog</artifactId>
    <packaging>pom</packaging>
    <version>3.1.0</version>
    <modules>
        <module>web</module>
        <module>service</module>
        <module>common</module>
        <module>data</module>
        <module>blog-web</module>
        <module>admin-web</module>
        <module>admin-token</module>
        <module>package-web</module>
    </modules>
    <name>zrlog</name>
    <description>ZrLog是使用Java开发的博客/CMS程序，具有简约，易用，组件化，内存占用低等特点。自带Markdown编辑器，让更多的精力放在写作上，而不是花费大量时间在学习程序的使用上。
    </description>
    <url>https://www.zrlog.com</url>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.test.skip>true</maven.test.skip>
        <finalName>zrlog</finalName>
        <disableNodePackage>false</disableNodePackage>
    </properties>

    <developers>
        <developer>
            <name>xiaochun</name>
            <email>xchun90@163.com</email>
            <url>https://xiaochun.zrlog.com</url>
            <roles>
                <role>owner</role>
            </roles>
        </developer>
        <developer>
            <name>weekdragon</name>
            <email>790774717@qq.com</email>
            <url>https://www.weekdragon.cn</url>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <name>e-lionel</name>
            <email>lionel0724@163.com</email>
            <url>https://github.com/e-lionel</url>
            <roles>
                <role>reporter</role>
            </roles>
        </developer>
    </developers>

    <issueManagement>
        <system>Github Issue</system>
        <url>https://github.com/94fzb/zrlog</url>
    </issueManagement>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <dependencies>
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
            <version>2.3.32</version>
        </dependency>
        <dependency>
            <groupId>com.hibegin</groupId>
            <artifactId>simplewebserver</artifactId>
            <version>0.3.126</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.zrlog</groupId>
                <artifactId>common</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>com.zrlog</groupId>
                <artifactId>data</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>com.zrlog</groupId>
                <artifactId>admin-token</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>com.zrlog</groupId>
                <artifactId>blog-web</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>com.zrlog</groupId>
                <artifactId>service</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>com.zrlog</groupId>
                <artifactId>admin-web</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>com.zrlog</groupId>
                <artifactId>web</artifactId>
                <version>3.1.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
                <version>3.11.0</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.github.eirslett</groupId>
                    <artifactId>frontend-maven-plugin</artifactId>
                    <version>1.15.0</version>
                    <configuration>
                        <nodeVersion>v18.20.3</nodeVersion>
                        <yarnVersion>v1.22.22</yarnVersion>
                        <workingDirectory>src/main/frontend</workingDirectory>
                        <installDirectory>target</installDirectory>
                        <nodeDownloadRoot>https://npmmirror.com/mirrors/node/</nodeDownloadRoot>
                        <yarnDownloadRoot>https://repo.huaweicloud.com/yarn/</yarnDownloadRoot>
                        <npmRegistryURL>https://registry.npmmirror.com</npmRegistryURL>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.6.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
